[gd_scene load_steps=6 format=3 uid="uid://l42dh3ciyvya"]

[ext_resource type="Script" path="res://entities/enemies/debugEnemy/debugEnemyController.gd" id="1_wq4mi"]
[ext_resource type="PackedScene" uid="uid://iyy1rqxkcxwq" path="res://entities/bulletPatterns/5shotDirect.tscn" id="2_nn31b"]
[ext_resource type="PackedScene" uid="uid://d4n3xqs2hxhs1" path="res://entities/bulletPatterns/spiral.tscn" id="3_mrwyf"]
[ext_resource type="PackedScene" uid="uid://bjgsb4774pjfc" path="res://entities/bulletPatterns/shotgun.tscn" id="4_nu3rt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6wn24"]

[node name="Debug Enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_wq4mi")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6wn24")

[node name="dmgFlash" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="atkCooldown" type="Timer" parent="."]
one_shot = true

[node name="5ShotDirect" parent="." instance=ExtResource("2_nn31b")]

[node name="Spiral" parent="." instance=ExtResource("3_mrwyf")]

[node name="Shotgun" parent="." instance=ExtResource("4_nu3rt")]
